--- a/demo/app/views/home/index.html.erb
+++ b/demo/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 </dl>
 
 <div class='pull-right'>
-  <%= link_to 'Put Object', '#', class: 'btn btn-primary' %>
+  <%= link_to 'Put Object', new_put_path, class: 'btn btn-primary' %>
   <%= link_to 'Post Object', '#', class: 'btn btn-primary' %>
 </div>
 
