Add Post Object

--- a/demo/app/views/home/new_put.html.erb
+++ b/demo/app/views/home/new_put.html.erb
@@ -1,3 +1,7 @@
+<h2 id="put-form">PUT Object</h2>
+
+<hr/>
+
 <%= form_tag '/new_put', method: :post, multipart: true, class: 'form-horizontal' do -%>
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label required">Name</label>
