--- a/demo/app/views/home/index.html.erb
+++ b/demo/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class='pull-right'>
   <%= link_to 'Put Object', new_put_path, class: 'btn btn-primary' %>
-  <%= link_to 'Post Object', '#', class: 'btn btn-primary' %>
+  <%= link_to 'Post Object', new_post_path, class: 'btn btn-primary' %>
 </div>
 
 <table class='table table-hover'>
